# KudaGo-Android

./: CMakeLists.txt  CMakeLists.txt.user.ZHtTPO  KudaGo.qmlproject  qmlmodules
android/: AndroidManifest.xml
content/: App.qml  CMakeLists.txt
content/components/: CustomPopup.qml
content/components/compilation/: CompilationCard.qml  CompilationCardContent.qml  CompilationElements.qml  CompilationInfo.qml  CompilationShortCard.qml  CompilationsList.qml
content/components/credits/: Credits.qml  CreditsAdditional.qml  CreditsApi.qml  CreditsAuthors.qml
content/components/events/: EventShortCard.qml  EventsList.qml
content/components/extending_block/: ExtendingBlock.qml  FirstBlockDelegate.qml
content/components/footer/: Footer.qml  FooterButton.qml
content/components/header/: Header.qml
content/components/home_page_section/: HomePageSection.qml  HomePageSectionItem.qml
content/components/news/: NewsCard.qml  NewsImagesSwiper.qml  NewsList.qml
content/components/search_widget/: CategoriesBlock.qml  CitiesBlock.qml  (+4 more)
content/pages/: CompilationPage.qml  CompilationsPage.qml  EventPage.qml  FavouriteEventsPage.qml  HomePage.qml  NewsPage.qml  SearchPage.qml  TodayEventsPage.qml
content/services/: categories.js  cities.js  compilations.js  events.js  index.js  news.js
content/storage/: AbstractRepository.qml  Database.qml  EventsDatabaseService.qml
content/ui/: Icon.qml  IconButton.qml
imports/: CMakeLists.txt  pictures.qrc
imports/KudaGo/: CMakeLists.txt  Constants.qml  EventsStore.qml  qmldir
src/: import_qml_plugins.h  main.cpp
(+20 files in other folders)
